# isa-classifier

./: .gitignore
armgen/oracle/: __init__.py  build_oracle.py  compiler.py  config.py  matrix.py  metadata.py  oracle_config.yaml
armgen/oracle/firmware/: __init__.py  build_firmware.py  config.py  extractor.py  headers.py  layout.py
armgen/programs/: 10_template_madness.cpp  asm_context_switch.c  synopsia_binary_map_3d.ini
classifier/: Cargo.toml  analyze_accuracy.py  supplementary_opcode_reference.md  universal_binary_identification_algorithm.md
classifier/examples/: all_scores.rs  recursive_analysis.rs  scores.rs
classifier/src/: error.rs  formatter.rs  lib.rs  main.rs  types.rs  wasm.rs
classifier/src/architectures/: aarch64.rs  alpha.rs  arc.rs  arm.rs  avr.rs  blackfin.rs  c166.rs  c16x.rs  cellspu.rs  csky.rs  dalvik.rs  fr30.rs  hc11.rs  hcs12.rs  hexagon.rs  i860.rs  ia64.rs  jvm.rs  lanai.rs  loongarch.rs  m68k.rs  microblaze.rs  mips.rs  mod.rs  msp430.rs  nios2.rs  openrisc.rs  parisc.rs  ppc.rs  ppcvle.rs  riscv.rs  rl78.rs  s12z.rs  s390x.rs  sparc.rs  superh.rs  tic6000.rs  tricore.rs  v850.rs  vax.rs  (+3 more)
classifier/src/batch/: keys.rs  mod.rs  pipeline.rs  routing.rs  slugs.rs  stats.rs  tui.rs  types.rs  writer.rs
classifier/src/extensions/: detector.rs  mod.rs
classifier/src/formats/: amiga_hunk.rs  aof.rs  aout.rs  ar.rs  bcf.rs  bflt.rs  coff.rs  console.rs  dex.rs  ecoff.rs  elf.rs  epoc.rs  epr.rs  esp.rs  fatelf.rs  frf.rs  goff.rs  hex.rs  java.rs  kernel.rs  llvm_bc.rs  macho.rs  mod.rs  mz.rs  ols.rs  omf.rs  os9.rs  palm.rs  pe.rs  pef.rs  raw.rs  sgo.rs  som.rs  sox.rs  tds.rs  vbf.rs  wasm.rs  xcoff.rs
classifier/src/heuristics/: mod.rs  scorer.rs
